fix: scrollbar colour

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,5 +28,5 @@ body,
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  @apply bg-amber-400;
+  @apply bg-teal-400;
 }
